--- a/client/company/views/css/theme-default.css
+++ b/client/company/views/css/theme-default.css
@@ -102,7 +102,7 @@ body {
   width: 50px;
 }
 .page-container .page-content {
-  min-height: 100%;
+  /* min-height: 100%; */
   margin-left: 220px;
   background: #f5f5f5 url('../img/bg.png') left top repeat;
   position: relative;
