admin-full-misslogin

--- a/client/admin/views/home.html
+++ b/client/admin/views/home.html
@@ -46,7 +46,7 @@
                     <td >{{n.about}}</td>
                     <td >{{n.created_at | date:'dd/MM/yyyy HH:mm:ss'}}</td>
                     <td class="actions">
-                      <a href="#" class=" btn btn-danger btn-sm" ng-disabled="n.activated" ng-click="confirmbyadmin(n)">
+                      <a  class=" btn btn-danger btn-sm" ng-disabled="n.activated" ng-click="confirmbyadmin(n)">
                         <b>Activate</b>
                       </a>
                     </td>
