CV - missing report

--- a/client/views/student/login.html
+++ b/client/views/student/login.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<div class="container">
+<div class="container" style="position: fixed;">
   <header>
     <h1>Login and Registration Form</h1>
   </header>
