--- a/client/views/header/css/style.css
+++ b/client/views/header/css/style.css
@@ -84,9 +84,9 @@ body a{
 }
 nav {
   width:100%;
-  height:60px;
+  height:70px;
   background: #292f36;
-  postion:fixed;
+  position:fixed;
   z-index:10;
 }
 .site-content{
