--- a/client/views/modal/cv.html
+++ b/client/views/modal/cv.html
@@ -1,3 +1,6 @@
+<head>
+    <link href="views/modal/cv.css" rel="stylesheet" type="text/css" media="all" />
+</head>
 <div id="applyJobModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="applyJobModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -8,7 +11,6 @@
                 <h4 class="modal-title" id="applyJobModalLabel">Application Form</h4>
                 <div id="page" class="hfeed site grid-container container grid-parent">
                     <div id="content" class="site-content">
-
                         <div id="primary" class="content-area grid-parent mobile-grid-100 grid-100 tablet-grid-100">
                             <main id="main" class="site-main">
                                 <div class="inside-article row">
@@ -28,6 +30,7 @@
                                             </ul>
                                         </div>
                                     </div>
+
                                 </div>
 
                                 <div class="personal information">
@@ -55,6 +58,7 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="row">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
@@ -82,6 +86,7 @@
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <div class="form-group">
@@ -102,8 +107,7 @@
                                     <div class="content">
                                         <form>
                                             <div class="form-group">
-                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.skill">- Strong knowledge of JavaScript and Experience with at least some of the following technologies: NoSQL, AngularJS, NodeJS, ExpressJS, graph databases, Ionic, Cordova.
-             </textarea>
+                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.skill">             </textarea>
                                             </div>
                                         </form>
                                     </div>
@@ -115,8 +119,7 @@
                                     <div class="content">
                                         <form>
                                             <div class="form-group">
-                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.experience">6 tháng thực tập tại FPT
-             </textarea>
+                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.experience">             </textarea>
                                             </div>
                                         </form>
                                     </div>
