--- a/client/views/student/css/login.css
+++ b/client/views/student/css/login.css
@@ -158,9 +158,10 @@ a{
 
 /* remove codrops styles and reset the whole thing */
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
-body{background:url(http://www.businessnewsdaily.com/images/i/000/007/874/original/free-business-plan-templates.jpg);
+body{background:url(../images/banner.jpg);
 background-attachment:fixed;
 background-size:cover;
+
 }
 #container_demo{
 	 text-align: left;
@@ -4463,9 +4464,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 		transform: scale(1);
 	}
 }
-body {
-    padding-top:50px
-  }
+
 .glyphicon-remove:hover {
     cursor:pointer
   }
