get post for company

--- a/client/views/home/post.html
+++ b/client/views/home/post.html
@@ -105,8 +105,9 @@
                 </div>
             </div>
         </div>
-
-        <div id="applyJobModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="applyJobModalLabel" aria-hidden="true">
+        <application-form visible="showModal"></application-form>
+        
+        <!--<div id="applyJobModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="applyJobModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -275,7 +276,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         <div class="clearfix"></div>
     </div>
 </div>
