--- a/client/views/modal/cv.html
+++ b/client/views/modal/cv.html
@@ -1,6 +1,3 @@
-<head>
-    <link href="views/modal/cv.css" rel="stylesheet" type="text/css" media="all" />
-</head>
 <div id="applyJobModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="applyJobModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -11,6 +8,7 @@
                 <h4 class="modal-title" id="applyJobModalLabel">Application Form</h4>
                 <div id="page" class="hfeed site grid-container container grid-parent">
                     <div id="content" class="site-content">
+
                         <div id="primary" class="content-area grid-parent mobile-grid-100 grid-100 tablet-grid-100">
                             <main id="main" class="site-main">
                                 <div class="inside-article row">
@@ -30,7 +28,6 @@
                                             </ul>
                                         </div>
                                     </div>
-
                                 </div>
 
                                 <div class="personal information">
@@ -58,7 +55,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="row">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
@@ -86,7 +82,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <div class="form-group">
@@ -107,7 +102,8 @@
                                     <div class="content">
                                         <form>
                                             <div class="form-group">
-                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.skill">             </textarea>
+                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.skill">- Strong knowledge of JavaScript and Experience with at least some of the following technologies: NoSQL, AngularJS, NodeJS, ExpressJS, graph databases, Ionic, Cordova.
+             </textarea>
                                             </div>
                                         </form>
                                     </div>
@@ -119,7 +115,8 @@
                                     <div class="content">
                                         <form>
                                             <div class="form-group">
-                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.experience">             </textarea>
+                                                <textarea class="form-control" rows="5" id="comment" ng-model="infoCV.experience">6 tháng thực tập tại FPT
+             </textarea>
                                             </div>
                                         </form>
                                     </div>
@@ -158,8 +155,8 @@
                                             </div>
                                         </form>
                                     </div>
-
                                 </div>
+
                                 <div style="margin-bottom:10px" class="application-command">
                                     <button type="button" class="application_button btn btn-success" data-modal="modal" id="onload" ng-click="applyCV()">Nộp CV</button>
                                 </div>
